--- a/app/about/index.html
+++ b/app/about/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="theme-color" content="#005ab4">
-    <meta name="msapplication-navbutton-color" content="#005ab4">
-    <meta name="apple-mobile-web-app-status-bar-style" content="#005ab4">
+    <meta name="theme-color" content="#1e1e25">
+    <meta name="msapplication-navbutton-color" content="#1e1e25">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#1e1e25">
 
     <title>Ezic: Acerca de nosotros.</title>
 
@@ -42,11 +42,13 @@
 			</div>
 
 			<div class="project-info">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis voluptatum quibusdam maxime accusantium, nostrum cumque totam assumenda delectus quaerat, aut facilis eaque, corrupti error officia exercitationem minus distinctio odit eligendi!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat id ea non natus maiores labore harum. Sequi consequuntur id quod excepturi. Repellat sed a neque. Unde labore dolorum ab fugiat.At asperiores nihil quae corporis similique totam in, illum, natus fugiat eius quisquam eveniet optio ducimus aut aspernatur? Tenetur illo aliquam eos aut natus, libero error. Eligendi sed amet facilis!
-				<br><br>
-				Atque maiores repellendus necessitatibus vero ducimus tempora, accusantium fugit distinctio illum libero. Impedit quos officiis quaerat, porro eius, possimus nisi odit! Eligendi, provident quos id officia, voluptatem quidem porro ducimus.
-				<br><br>
-				Provident blanditiis aspernatur excepturi ipsam consectetur tempore fugiat nostrum, nihil quibusdam voluptates autem vero unde maiores. Perspiciatis beatae modi illum, architecto aut ipsam repellendus odit quia non, molestiae est, quo.
+				Plataforma web orientada al rubro educativo, que nace bajo la necesidad del desarrollo tecnológico en el país y de satisfacer las necesidades de las entidades protagonistas del rubro (Coordinador, Docente, Alumno). <br><br> 
+
+				En búsqueda de dejar atrás el papeleo, y el constante esfuerzo y trabajo humano, nos impulsamos a creer Ezic , adaptable ante cualquier necesidad de un centro educativo público o privado. <br><br>
+
+				Si eres usuario: ¡Ingresa, modifica y visualiza¡ <br><br>
+
+				<h3 class="center grey-text text-darken-4">Sé parte de Ezic &copy;</h3>
 			</div>
 
 			<div class="cut-section">
